노멀투표/상세 분리 + 투표 백엔드 json데이터 끝